switch back to stock LoopNode & benchmarks